added error handler to API, fixed up User model, cleaned up swagger
